2004-12-17  Paul Jenner  <psj.home@ntlworld.com>

	* libraries/javalib/javax/swing/TransferHandler.java
	(createTransferable): Made protected.

2004-12-16  Adam Heath  <doogieg@brainfood.com>

	* libraries/clib/native/Runtime.c:
	  Use LL suffix instead of just L for long long constant.

2004-12-16  Michael Koch  <konqueror@gmx.de>

	* libraries/javalib/javax/swing/JTable.java,
	libraries/javalib/javax/swing/plaf/basic/BasicTableHeaderUI.java,
	libraries/javalib/javax/swing/plaf/basic/BasicTableUI.java:
	Use fixed get/setIntercellSpacing() methods.

2004-12-16  Michael Koch  <konqueror@gmx.de>

	* libraries/javalib/javax/swing/JTable.java
	(getIntercellSpacing): Fixed typo in method name.
	(setIntercellSpacing): Likewise.

2004-12-16  Michael Koch  <konqueror@gmx.de>

	* libraries/javalib/javax/swing/text/JTextComponent.java
	(focusAccelerator): New variable.
	(getFocusAccelerator): New method.
	(setFocusAccelerator): Likewise.

2004-12-16  Adam Heath  <doogieg@brainfood.com>

	* config/alpha/alpha.c, config/mips/common.h, config/mips/mips.c
	  config/parisc/common.h, config/sh/common.h,
	  kaffe/jvmpi/jvmpi_kaffe.c, kaffe/kaffevm/classMethod.c,
	  kaffe/kaffevm/classPool.c, kaffe/kaffevm/exception.c,
	  kaffe/kaffevm/ksem.c, kaffe/kaffevm/ksem.h,
	  kaffe/kaffevm/locks.c, kaffe/kaffevm/locks.h,
	  kaffe/kaffevm/soft.c, kaffe/kaffevm/stackTrace.c,
	  kaffe/kaffevm/support.c, kaffe/kaffevm/support.h,
	  kaffe/kaffevm/thread.c, kaffe/kaffevm/thread.h,
	  kaffe/kaffevm/utf8const.c, kaffe/kaffevm/boehm-gc/gc2.c,
	  kaffe/kaffevm/intrp/machine.c,
	  kaffe/kaffevm/intrp/stackTrace-impl.h,
	  kaffe/kaffevm/jit/machine.c, kaffe/kaffevm/jni/jni.c,
	  kaffe/kaffevm/kaffe-gc/gc-incremental.c,
	  kaffe/kaffevm/kaffe-gc/gc-incremental.h,
	  kaffe/kaffevm/kaffe-gc/gc-mem.c,
	  kaffe/kaffevm/kaffe-gc/gc-refs.c,
	  kaffe/kaffevm/systems/beos-native/lock-impl.h,
	  kaffe/xprof/xprofiler.c, libraries/clib/native/Object.c,
	  libraries/clib/native/Thread.c,