@@ -1,3 +1,10 @@
+2004-12-17  Michael Koch  <konqueror@gmx.de>
+
+	* libraries/javalib/javax/swing/JTable.java
+	(addColumn): New method.
+	(getColumnClass): Likewise.
+	(getColumnName): Likewise.
+
 2004-12-17  Paul Jenner  <psj.home@ntlworld.com>
 
 	* libraries/javalib/javax/swing/TransferHandler.java
